feat: remove pills an imprive table ux
